--- a/package.json
+++ b/package.json
@@ -20,12 +20,25 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-devkit/build-angular": "^20.1.4",
+    "@angular/animations": "^20.1.4",
+    "@angular/cdk": "^20.1.4",
     "@angular/common": "^20.1.0",
     "@angular/compiler": "^20.1.0",
     "@angular/core": "^20.1.0",
     "@angular/forms": "^20.1.0",
+    "@angular/material": "^20.1.4",
     "@angular/platform-browser": "^20.1.0",
     "@angular/router": "^20.1.0",
+    "@auth0/angular-jwt": "^5.2.0",
+    "@fortawesome/fontawesome-free": "^7.0.0",
+    "@ng-select/ng-select": "^20.0.1",
+    "@popperjs/core": "^2.11.8",
+    "apexcharts": "^5.3.2",
+    "bootstrap": "^5.3.7",
+    "ng-apexcharts": "^2.0.0",
+    "ngx-spinner": "^19.0.0",
+    "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
