basic setting changes

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -5,7 +5,10 @@
   "compilerOptions": {
     "outDir": "./out-tsc/app",
     "types": [],
-    
+  },
+  "angularCompilerOptions": {
+    "enableNgForOfControlFlow": true,
+    "enableNgIfSyntacticSugar": true
   },
   "include": [
     "src/**/*.ts"
