--- a/package.json
+++ b/package.json
@@ -28,14 +28,17 @@
     "@angular/core": "^20.1.0",
     "@angular/forms": "^20.1.0",
     "@angular/material": "^20.1.4",
+    "@angular/material-moment-adapter": "^20.1.4",
     "@angular/platform-browser": "^20.1.0",
     "@angular/router": "^20.1.0",
     "@auth0/angular-jwt": "^5.2.0",
     "@fortawesome/fontawesome-free": "^7.0.0",
     "@ng-select/ng-select": "^20.0.1",
     "@popperjs/core": "^2.11.8",
+    "@swimlane/ngx-datatable": "^22.0.0",
     "apexcharts": "^5.3.2",
     "bootstrap": "^5.3.7",
+    "moment": "^2.30.1",
     "ng-apexcharts": "^2.0.0",
     "ngx-spinner": "^19.0.0",
     "ngx-toastr": "^19.0.0",
